[gd_scene load_steps=6 format=3 uid="uid://dnmbnoowmyt4p"]

[ext_resource type="Script" uid="uid://c2fioncp0nwwh" path="res://autoload/dev_tools/dev_tools.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bwojit06v682u" path="res://autoload/dev_tools/debug_label.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dwe8nkax3alhx" path="res://autoload/dev_tools/collect_button.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bp3wpcjckn7i5" path="res://shared/ui/debug_language_switcher/debug_language_switcher.tscn" id="4"]

[sub_resource type="LabelSettings" id="LabelSettings_2wpby"]

[node name="DevTools" type="CanvasLayer"]
layer = 4
script = ExtResource("1")

[node name="PhraseData" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -140.0
offset_right = 1.0
grow_vertical = 0

[node name="PhraseDataLabel" type="Label" parent="PhraseData"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = -18.0
offset_right = 115.0
offset_bottom = 135.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "NAME = 0
OBJECT = 1
ACTION = 2
SPECIAL = 3
NUMERAL = 4
LOCAL = 5"
label_settings = SubResource("LabelSettings_2wpby")

[node name="DiagnosticsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 9.0
offset_bottom = 112.0

[node name="FPSLabel" parent="DiagnosticsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="RAMLabel" parent="DiagnosticsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="VRAMLabel" parent="DiagnosticsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="FocusTargetLabel" parent="DiagnosticsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadLabel" parent="DiagnosticsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="DialogTimerLabel" parent="DiagnosticsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.5
offset_right = 187.5
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/separation = 32

[node name="ScenarioProgressContainer" type="HBoxContainer" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="CollectButton" parent="TopBar/ScenarioProgressContainer" instance=ExtResource("3")]
layout_mode = 2
focus_mode = 0

[node name="ResetScenarioStateButton" type="Button" parent="TopBar/ScenarioProgressContainer"]
layout_mode = 2
focus_mode = 0
text = "Reset Scenario State"

[node name="DebugLanguageSwitcher" parent="TopBar" instance=ExtResource("4")]
layout_mode = 2
focus_mode = 0

[node name="ClearAchievementsButton" type="Button" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear achievements"

[connection signal="pressed" from="TopBar/ScenarioProgressContainer/ResetScenarioStateButton" to="." method="_on_reset_scenario_state_button_pressed"]
